# CCL-CGI

./: LICENSE  README.md  config.py  main.py  modelcard.md  pyproject.toml  run.py
callbacks/: eval.py
checkpoint/: CCL_CGI_ckpt.pkl  CCL_CGI_withcancer_ckpt.pkl  NSCLC_ckpt.pkl  mlp_triple_spatialType_rw_layerNums_3_graphsNum_6_neighborsNum_8_optimizer_adam_lr_0.005__epoch_200__fold_6.pkl  singleR_ckpt.pkl
doc/: Additional_Datasets_Reproducibility.md  CCL-CGI_CONFIGURABLE_ARGUMENTS.md  CCL-CGI_DATASET_INFO.md  CCL-CGI_INTERMEDIATE_FILES.md  modelcard.md
layers/: __init__.py  aggregate.py  attentionFusion.py  cellTypeSpecEmbedding.py  centralityEncoding.py  extendedAttentionAggregate.py  graphormerEncoder.py  multiHeadAttention.py  spatialEncoding.py  tensorToString.py
legacy/: main.py  run.py
log/: CCL_CGI_performance.txt  CCL_CGI_performance_CCL_CGI.csv  CCL_CGI_performance_R12_origin_8d_all.csv  cell_type_pancancer_result.txt  result_CCL_CGI_CCL_CGI.csv  result_CCL_CGI_R12_origin_8d_all.csv
losses/: __init__.py  contrastiveLoss.py  triple_loss.py  weightedBinaryCrossEntropy.py
models/: base_model.py  panCancerGenePredict.py  tree.py
preprocessing/: README.md  build_decoupler_h5.py  cell_type_to_pinnacle_ppi.example.json  prepare_decoupler_inputs.py  requirements.txt
related_files/: predict_scores.csv
tools/: extract_attention_weights.py
utils/: DATASET.py  __init__.py  io.py  node2vec.py  run_cli_helpers.py  run_data_helpers.py  run_graph_helpers.py  run_manifest.py  run_metrics_helpers.py  statistical_tests.py  summarize_performance.py  utils.py  (+1 more)
(+19 files in other folders)
