[project]
name = "ccl-cgi"
version = "0.1.0"
description = "Environment for CCL-CGI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py==3.11.0",
    "networkx==3.3",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "scikit-learn==1.4.2",
    "torch==1.13.1",
    "pytorch-lightning==2.1.0",
    "torch-geometric==2.5.3",
    "lightning==2.1.4",
    "matplotlib==3.6.3",
    "setuptools==59.6.0"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu116", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu116"
url = "https://download.pytorch.org/whl/cu116"
explicit = true